k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kvm-server
  labels:
    name: kvm-server
